0.7.0: (Future)
Features:
 - ELF support
 - Game Boy Camera support
 - Qt: Set default Game Boy colors
 - Game Boy Printer support
 - Super Game Boy support
 - Customizable autofire speed
 - Ability to set default Game Boy model
 - Map viewer
 - Automatic cheat loading and saving
 - GameShark and Action Replay button support
 - AGBPrint support
 - Debugger: Conditional breakpoints and watchpoints
Bugfixes:
 - GB Audio: Make audio unsigned with bias (fixes mgba.io/i/749)
 - GB Serialize: Fix audio state loading
 - GB Video: Fix dot clock timing being slightly wrong
 - Qt: Fix GL display when loading a game from CLI (fixes mgba.io/i/843)
 - ARM: Fix MSR when T bit is set
 - GB Serialize: Fix game title check
 - GB: Revamp IRQ handling based on new information
 - GBA Video: Don't mask out high bits of BLDY (fixes mgba.io/i/899)
 - GBA Video: Force align 256-color tiles
 - GBA DMA: ROM reads are forced to increment
 - GB Video: Fix loading states while in mode 3
 - GB Video: Only trigger STAT write IRQs when screen is on (fixes mgba.io/i/912)
 - GBA Cheats: Fix PARv3 slide codes (fixes mgba.io/i/919)
 - GBA Video: OBJWIN can change blend params after OBJ is drawn (fixes mgba.io/i/921)
 - GBA DMA: Fix invalid DMA reads (fixes mgba.io/i/142)
 - GBA Savedata: Fix crash when resizing flash
 - GBA Video: Add delay when enabling BGs (fixes mgba.io/i/744, mgba.io/i/752)
 - GB Memory: HDMAs should not start when LCD is off (fixes mgba.io/i/310)
 - GBA Cheats: Fix slide codes not initializing properly
 - Qt: Fix locale being set to English on settings save (fixes mgba.io/i/906)
 - LR35902: Fix watchpoints not reporting new value
 - GBA Audio: Increase PSG volume (fixes mgba.io/i/932)
 - 3DS: Fix opening files in directory names with trailing slashes
 - GB MBC: Fix MBC2 saves (fixes mgba.io/i/954)
 - GBA Memory: Fix copy-on-write memory leak
Misc:
 - GBA Timer: Use global cycles for timers
 - GBA: Extend oddly-sized ROMs to full address space (fixes mgba.io/i/722)